add backend api route for getMostPopularProducts and Newest products , and adding the details in the open api spec file
